2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs: Remove
	  unnecessary check that forces the loading of the class.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml: Set navigate to shortcut key.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs:
	  Corrected member filtering.

2010-04-23  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* gtk-gui/gui.stetic:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.NavigateToDialog:
	* MonoDevelop.Components/ListView.cs:
	* MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs:
	* MonoDevelop.Ide.Commands/SearchCommands.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.GoToDialog.cs:
	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs:
	* MonoDevelop.Ide.NavigateToDialog/NavigateToCommand.cs:
	* gtk-gui/MonoDevelop.Ide.NavigateToDialog.NavigateToDialog.cs:
	  Worked on go to dialog. (go to file/type are unaffected in
	  function - only the gui changed). Added 'Navigate To'
	  command which allows to navigate to any file/type/member.

2010-04-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolder.cs: Use
	  canonical paths when comparing paths.

2010-04-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/MonoDevelopStatusBar.cs: Don't update
	  cursor/mode labels when they're already empty.

2010-04-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide/DispatchService.cs: Added new
	  BackgroundDispatchAndWait method.

	* MonoDevelop.Ide.Gui/MonoDevelopStatusBar.cs: Add support for
	  progress bar with auto-pulse.

2010-04-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWindow.cs: Fixed 'Bug
	  598728 - Code completion does not commit on generics >'.

2010-04-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide/Ide.cs:
	* MonoDevelop.Ide/IdeStartup.cs: